@@ -455,6 +455,72 @@ if assimulo_installed:
             res = model.simulate(final_time=1.5,options=opts)
             
             assert res.solver.maxord == 1
+        
+        @testattr(stddist = True)
+        def test_with_jacobian_option(self):
+            model = Dummy_FMUModelME2([], "NoState.Example1.fmu", os.path.join(file_path, "files", "FMUs", "XML", "ME2.0"), _connect_dll=False)
+            opts = model.simulate_options()
+            opts["solver"] = "CVode"
+            opts["result_handling"] = "none"
+            
+            from pyfmi.fmi_algorithm_drivers import AssimuloFMIAlg, PYFMI_JACOBIAN_LIMIT
+            
+            class TempAlg(AssimuloFMIAlg):
+                def solve(self):
+                    pass
+            
+            def run_case(expected, default="Default"):
+                model.reset()
+                res = model.simulate(final_time=1.5,options=opts, algorithm=TempAlg)
+                assert res.options["with_jacobian"] == default, res.options["with_jacobian"]
+                assert res.solver.problem._with_jacobian == expected, res.solver.problem._with_jacobian
+            
+            run_case(False)
+            
+            model.get_ode_sizes = lambda: (PYFMI_JACOBIAN_LIMIT+1, 0)
+            run_case(True)
+            
+            opts["solver"] = "Radau5ODE"
+            run_case(False)
+            
+            opts["solver"] = "CVode"
+            opts["with_jacobian"] = False
+            run_case(False, False)
+            
+            model.get_ode_sizes = lambda: (PYFMI_JACOBIAN_LIMIT-1, 0)
+            opts["with_jacobian"] = True
+            run_case(True, True)
+        
+        @testattr(stddist = True)
+        def test_sparse_option(self):
+            from pyfmi.fmi_algorithm_drivers import AssimuloFMIAlg, PYFMI_JACOBIAN_SPARSE_SIZE_LIMIT, PYFMI_JACOBIAN_SPARSE_NNZ_LIMIT
+            
+            class TempAlg(AssimuloFMIAlg):
+                def solve(self):
+                    pass
+            
+            def run_case(expected_jacobian, expected_sparse, fnbr=0, nnz={}, set_sparse=False):
+                class Sparse_FMUModelME2(Dummy_FMUModelME2):
+                    def get_derivatives_dependencies(self):
+                        return (nnz, {})
+            
+                model = Sparse_FMUModelME2([], "NoState.Example1.fmu", os.path.join(file_path, "files", "FMUs", "XML", "ME2.0"), _connect_dll=False)
+                opts = model.simulate_options()
+                opts["solver"] = "CVode"
+                opts["result_handling"] = "none"
+                if set_sparse:
+                    opts["CVode_options"]["linear_solver"] = "SPARSE"
+                
+                model.get_ode_sizes = lambda: (fnbr, 0)
+                
+                res = model.simulate(final_time=1.5,options=opts, algorithm=TempAlg)
+                assert res.solver.problem._with_jacobian == expected_jacobian, res.solver.problem._with_jacobian
+                assert res.solver.linear_solver == expected_sparse, res.solver.linear_solver
+            
+            run_case(False, "DENSE")
+            run_case(True, "DENSE",  PYFMI_JACOBIAN_SPARSE_SIZE_LIMIT+1, {"Dep": [1]*PYFMI_JACOBIAN_SPARSE_SIZE_LIMIT**2})
+            run_case(True, "SPARSE", PYFMI_JACOBIAN_SPARSE_SIZE_LIMIT+1, {"Dep": [1]*PYFMI_JACOBIAN_SPARSE_SIZE_LIMIT})
+            run_case(True, "SPARSE", PYFMI_JACOBIAN_SPARSE_SIZE_LIMIT+1, {"Dep": [1]*PYFMI_JACOBIAN_SPARSE_SIZE_LIMIT}, True)
             
 class Test_FMUModelME2:
     
